# sdf_modeler_rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cargokit.yaml  memory.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/skills/add-export-format/: SKILL.md
.claude/skills/add-modifier/: SKILL.md  reference.md
.claude/skills/add-sdf-primitive/: SKILL.md  reference.md
.claude/skills/add-ui-panel/: SKILL.md
.claude/skills/sdf-architecture/: SKILL.md  gpu-pipeline.md
.claude/skills/verify/: SKILL.md
.githooks/: pre-commit
.github/workflows/: validation.yml
apps/flutter/: README.md  pubspec.yaml
apps/flutter/integration_test/: simple_test.dart
apps/flutter/lib/: app.dart  main.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/rust/: Cargo.toml
apps/flutter/rust/src/: bridge_state.rs  frb_generated.rs  lib.rs  native_viewport.rs
apps/flutter/rust/src/api/: mirrors.rs  simple.rs
apps/flutter/rust_builder/: pubspec.yaml
apps/flutter/scripts/: frb_codegen.ps1
apps/flutter/test/: mock_snapshot_adapter.dart  scene_snapshot_test.dart  shell_contract_test.dart  texture_viewport_event_test.dart  widget_test.dart
apps/flutter/web/: index.html  manifest.json
apps/flutter/windows/: CMakeLists.txt
docs/: android_apk.md  architecture.md  brainstorm_ux.md  egui_parity_audit.md  egui_tiles_spike_notes.md  flutter_migration.md  perf-techniques.md  platform_targets.md  product_enhancements_prd.md  professional_ux_overhaul_batch_1_prd.md  professional_ux_overhaul_prd.md  qt_cpp_remake_master_prompt.md  sculpt_responsiveness_findings.md  slint_frontend.md  ui_backend_boundary.md  ui_customization_prd.md
docs/adr/: adr-0001-slint-host-architecture.md
docs/flutter_rewrite/: README.md  architecture_blueprint.md  implementation_plan.md  improvements_and_decisions.md  source_system_map.md  testing_and_quality.md
docs/flutter_rewrite/new_repo_templates/: AGENTS.md  CLAUDE.md  SKILLS.md
docs/react-rebuild/: README.md  sdf-modeler-react-rebuild.md
docs/scenes/: glass_contact_lab.sdf  material_showcase.sdf
docs/slint_migration/: full_slint_embed_slices.md  panel_parity.md  perf_baseline.md
experiments/slint_host_spike/: Cargo.toml  README.md
experiments/slint_host_spike/src/: lib.rs
flutter_app/: .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/integration_test/: simple_test.dart
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/src/: app.dart  camera_state.dart  viewport_widget.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/flutter/: generated_plugins.cmake
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/rust_builder/: pubspec.yaml
flutter_app/rust_builder/android/: build.gradle  settings.gradle
flutter_app/rust_builder/ios/: rust_lib_sdf_modeler.podspec
flutter_app/rust_builder/linux/: CMakeLists.txt
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  (+1 more)
plans/: prd.json  progress.txt  ralph-once.sh  ralph.sh  ralph_codex.ps1  ralph_common.sh  ralph_prompt.txt  run-slint-spike.ps1  run-slint-spike.sh  slint_migration_plan.md
scripts/: README.md  build_android_debug.ps1
shaders/: sdf.wgsl
src/: app.rs  app_core.rs  app_slint.rs  app_slint_sync.rs  compat.rs  desktop_dialogs.rs  dock_style.rs  egui_keymap.rs  egui_theme.rs  export.rs  expression.rs  frb_generated.rs  gizmo.rs  io.rs  keymap.rs  lib.rs  main.rs  material_preset.rs  mesh_import.rs  native_paths.rs  native_wgpu.rs  platform.rs  sculpt.rs  sculpt_history.rs  settings.rs
src/app/: action_handler.rs  actions.rs  async_tasks.rs  backend_frame.rs  controllers.rs  core_adapter.rs  egui_frontend.rs  egui_runtime.rs  egui_state.rs  frontend_bridge.rs  frontend_models.rs  gpu_sync.rs  input.rs  mod.rs  node_graph.rs  pipeline_compile.rs  reference_images.rs  runtime.rs  sculpt_detail.rs  sculpting.rs  shell_chrome_persistence.rs  slint_bridge.rs  slint_frontend.rs  state.rs  ui_geometry.rs  ui_panels.rs  viewport_interaction.rs
src/app_bridge/: dto.rs  mod.rs  renderer.rs  session.rs  workflows.rs
src/bridge/: gpu_context.rs  mod.rs  scene_handle.rs
src/core/: app_core.rs  commands.rs  mod.rs  types.rs
src/gizmo/: selection.rs  viewport.rs
src/gpu/: buffers.rs  camera.rs  codegen.rs  mod.rs  picking.rs  scene.rs  shader_templates.rs  slang_compiler.rs  state.rs  tape.rs
src/graph/: history.rs  mod.rs  presented_object.rs  scene.rs  voxel.rs
src/shaders/: bindings.wgsl  blit.slang  blit.wgsl  brush.wgsl  composite_entry.wgsl  environment_bake.wgsl  fallback_pick.wgsl  fallback_render.wgsl  modifiers.wgsl  noise.wgsl  operations.wgsl  pick.wgsl  prelude.wgsl  primitives.wgsl  reference_overlay.wgsl  rendering.wgsl  sdf.wgsl  transforms.wgsl  vertex.wgsl  voxel_sampling.wgsl
src/ui/: appearance_editor.rs  brush_settings.rs  chips.rs  chrome.rs  command_palette.rs  dev_settings.rs  dock.rs  dock_style_editor.rs  egui_compat.rs  export_dialog.rs  export_progress.rs  gizmo.rs  help.rs  history_panel.rs  import_dialog.rs  light_gizmo.rs  light_graph.rs  light_linking.rs  lights_panel.rs  main.slint  mod.rs  motion.rs  node_graph.rs  presented_object_actions.rs  presented_properties.rs  presented_scene_tree.rs  primary_shell.rs  profiler.rs  properties.rs  quick_toolbar.rs  recovery_dialog.rs  reference_image.rs  render_settings.rs  scene_stats.rs  scene_tree.rs  sculpt_convert_dialog.rs  settings_window.rs  toasts.rs  viewport.rs
src/ui_slint/: app_shell.slint  embedded_viewport.rs  mod.rs  winit_host.rs
src/viewport/: composite.rs  draw.rs  environment.rs  environment_bake.rs  gpu_ops.rs  mod.rs  pipelines.rs  reference_overlay.rs  textures.rs
ui/: main.slint  properties.slint  render_settings.slint  scene_tree.slint  toolbar.slint  types.slint  widgets.slint
web/: build.sh  index.html
web/pkg/: sdf_modeler.js
(+192 files in other folders)
