[package]
name = "sdf_modeler"
version = "0.1.0"
edition = "2021"
default-run = "sdf_modeler"

# Fast debug builds: opt-level=2 gives ~90% of release perf with debug symbols + fast compile
[profile.dev]
opt-level = 2

# Keep full optimization for release
[profile.release]
debug = true  # include debug symbols for profiling (flamegraph, samply)

[lib]
name = "sdf_modeler_lib"
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies]
egui = "0.29"
egui-wgpu = "0.29"
egui_dock = "0.14"
egui_node_graph2 = "0.7"
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wgpu = "22.1"

[dev-dependencies]
naga = { version = "22.1", features = ["wgsl-in"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = "0.15"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-software",
    "software-renderer-systemfonts",
    "compat-1-2",
] }
pollster = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rayon = "1.11.0"
image = "0.25"
jiff = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "android-native-activity",
] }
winit = { version = "0.30.12", default-features = false, features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
web-time = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement",
    "HtmlAnchorElement", "Blob", "BlobPropertyBag",
    "Url", "Storage", "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[patch.crates-io]
egui_node_graph2 = { path = "third_party/egui_node_graph2" }

[package.metadata.android]
use_aapt2 = true
package = "com.typscript.sdfmodeler"
build_targets = ["aarch64-linux-android"]
apk_name = "sdf-modeler"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 35

[package.metadata.android.application]
label = "SDF Modeler"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
label = "SDF Modeler"
config_changes = "orientation|keyboardHidden|screenSize|smallestScreenSize|screenLayout|uiMode"
launch_mode = "singleTop"
orientation = "landscape"
exported = true
resizeable_activity = true

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "sdf_modeler_lib"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[bin]]
name = "slint_host"
path = "src/bin/slint_host.rs"
