[package]
name = "sdf_modeler"
version = "0.1.0"
edition = "2021"
default-run = "sdf_modeler"

# Fast debug builds: opt-level=2 gives ~90% of release perf with debug symbols + fast compile
[profile.dev]
opt-level = 2

# Keep full optimization for release
[profile.release]
debug = true  # include debug symbols for profiling (flamegraph, samply)

[lib]
name = "sdf_modeler_lib"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wgpu = "27.0.1"
rfd = "0.15"
slint = { version = "1.15.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "raw-window-handle-06",
    "unstable-wgpu-27",
    "compat-1-2",
] }
pollster = "0.4"
env_logger = "0.11"
rayon = "1.11.0"
image = "0.25"
jiff = "0.2"

[dev-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }

[build-dependencies]
slint-build = "1.15.1"

[patch.crates-io]
skia-bindings = { path = "third_party/skia-bindings" }

[[bin]]
name = "slint_host"
path = "src/bin/slint_host.rs"
